[project]
name = "forecast"
version = "0.1.0"
description = ""
authors = [
    {name = "GerhardOfRivia",email = "10352022+GerhardOfRivia@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.5,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
