[tool.poetry]
name = "psk-generator"
version = "0.1.0"
description = ""
authors = ["GerhardOfRivia <10352022+GerhardOfRivia@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "generator"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
