[tool.poetry]
name = "psk-hexdump"
version = "0.1.0"
description = ""
authors = ["GerhardOfRivia <10352022+GerhardOfRivia@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "hexdump"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
