[project]
name = "psk-sbom"
version = "0.1.0"
description = "Software Bill of Materials"
authors = [
    {name = "GerhardOfRivia",email = "10352022+GerhardOfRivia@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
