[tool.poetry]
name = "psk-system-utils"
version = "0.1.0"
description = ""
authors = ["GerhardOfRivia <10352022+GerhardOfRivia@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "system_utils"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
