[tool.poetry]
name = "psk-trek"
version = "0.1.0"
description = ""
authors = ["John Smith <john@example.com>"]
readme = "README.md"
packages = [{include = "trek"}]

[tool.poetry.dependencies]
python = "^3.10"
questdb = "^3.0.0"
pandas = "^2.3.1"
pyarrow = "^20.0.0"
requests = "^2.32.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
